...
                                        <rect key="frame" x="0.0" y="0.0" width="334" height="54"/>
                                        <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="17"/>
                                        <state key="normal" title="Sign Up"/>
                                        <connections>
                                            <action selector="signUpButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6pT-sA-S8Y"/>
...
                                        <rect key="frame" x="0.0" y="62" width="334" height="54"/>
                                        <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="17"/>
                                        <state key="normal" title="Sign In"/>
                                        <connections>
                                            <action selector="signInButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pBs-1A-Xnc"/>
...
                                <rect key="frame" x="40" y="235" width="334" height="98"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="S8T-OQ-pYC">
                                        <rect key="frame" x="0.0" y="0.0" width="334" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" textContentType="email"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Azk-mV-yss">
                                        <rect key="frame" x="0.0" y="64" width="334" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="17"/>
                                <state key="normal" title="Sing In"/>
                                <connections>
                                    <action selector="signInButtonTapped:" destination="Kg5-mu-PQo" eventType="touchUpInside" id="UJz-vV-1Hp"/>
...
                                            <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kkH-dc-15I">
                                                <rect key="frame" x="192" y="0.0" width="162" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="TextFieldLastName"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ERr-4c-qDO">
                                        <rect key="frame" x="0.0" y="138" width="354" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                        <viewLayoutGuide key="safeArea" id="QPb-d9-IoJ"/>
                    </view>
                    <navigationItem key="navigationItem" title="Create Profile" id="IRg-TN-cw2">
                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="save" id="vT1-aN-TPR">
                            <connections>
...
                                        <rect key="frame" x="0.0" y="0.0" width="314" height="60"/>
                                        <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="17"/>
                                        <state key="normal" title="Account"/>
                                        <connections>
                                            <action selector="accountButtonTapped:" destination="DFv-L1-Wy3" eventType="touchUpInside" id="UYm-mI-sP4"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="17"/>
                                <state key="normal" title="Quick Check In"/>
                                <connections>
                                    <action selector="checkInButtonTapped:" destination="DFv-L1-Wy3" eventType="touchUpInside" id="L5m-aK-7xO"/>
...
                    </view>
                    <navigationItem key="navigationItem" id="K8y-w7-yak">
                        <barButtonItem key="leftBarButtonItem" title="Sign Out" id="KuF-AV-cHt">
                            <connections>
                                <action selector="signOutButtonTapped:" destination="DFv-L1-Wy3" id="TzV-lC-8cv"/>
...
                                    <segment title="🚙 Suv"/>
                                    <segment title="🚗 Sedan"/>
                                    <segment title="🚐 Van"/>
                                    <segment title="🚘 Wagon"/>
                                </segments>
...
                                    <segment title="⚫️ Black"/>
                                    <segment title="⚪️ White"/>
                                    <segment title="🔵 Blue"/>
                                    <segment title="🟡 Yellow"/>
                                </segments>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="17"/>
                                <state key="normal" title="Done"/>
                                <connections>
                                    <action selector="doneButtonTapped:" destination="3Vr-11-0eV" eventType="touchUpInside" id="iAX-m4-Wxg"/>
...
