...
            print("Loaded current user data")
            return
        }
    }
    
    func presentNotification(message: KFError) {
        self.presentKFAlertOnMainThread(title: "Thank you!", message: message.rawValue, buttonTitle: "Ok")
        // 
    }
    
    
    // MARK: - Button Actions
    
...
